k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrosolutions-properties
  labels:
    app: agrosolutions-properties
    environment: production
